refactor: improve format time and test it

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "scripts": {
-      "eas-build-pre-install": "corepack enable && yarn set version 4"
-    }
+    "eas-build-pre-install": "corepack enable && yarn set version 4",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -49,12 +48,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "jest": "^30.0.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.0",
     "typescript": "~5.8.3"
   },
   "private": true
