--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "eas-build-pre-install": "corepack enable && yarn set version 4",
+    "eas-build-pre-install": "corepack enable && pnpm set version 4",
     "test": "jest",
     "test:watch": "jest --watch"
   },
